# casa_digital_mcp

./: .gitignore  000001_add_affiliate_url.py  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  sync_products.py  test_db.py
app/: main.py
app/api/: api.py
app/api/endpoints/: admin.py  affiliate_links.py  affiliate_stores.py  products.py  sync.py
app/clients/: base_client.py  mercadolivre_client.py
app/core/: affiliate_config.py  config.py
app/db/: init_db.py  session.py
app/models/: affiliate_store.py  product.py
app/schemas/: affiliate_store.py  product.py
app/services/: affiliate_service.py  cache.py
app/services/affiliate_clients/: __init__.py  base.py  mercadolivre.py
app/templates/: affiliate_dashboard.html
docs/: project_definition.md
docs/diagrams/: sequenceDiagram.mmd
migrations/: env.py
migrations/versions/: 0efa13e07664_descrição_da_migração.py  36500326412b_adiciona_affiliate_store.py  42298cef8b72_descrição_da_migração.py  4d4154ab3921_recriando_todas_as_tabelas.py  5489d1be1945_add_affiliate_store_model.py  a2bc00bfdb17_adiciona_affiliate_store.py  a320824e6717_initial_schema.py  a8588558f6c6_recriando_todas_as_tabelas.py  c3fa82ec851b_initial_migration.py  c9a4a64f784f_recriando_todas_as_tabelas.py  dc22765c5e75_recriando_todas_as_tabelas.py  df3914c7598b_add_affiliate_store_relation_and_change_.py
