[project]
name = "casa_digital_mcp"
version = "0.1.0"
description = "Servidor MCP para integração de afiliados e automação de vendas"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "celery>=5.3.4",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.290",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"